# JiroJiro

./: .devassistant  Makefile.am  README  autogen.sh  configure.ac  draw.c  draw.h  internal.h  jirojiro.c  jirojiro.h  jirojiro.spec  jirojiro.ui  jirovideo.c
